--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -15,3 +15,12 @@ body {
     font-family: "Alan Sans", sans-serif;
 }
 
+/* ----------- Header Styles ------------- */
+
+header.primary {
+    background-color: #f4f4f4;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    text-shadow: 1px 1px 2px gray;
+}
