--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -78,5 +78,13 @@ header.primary nav a {
     font-size: .9rem;
     background-color: rgba(0, 0 , 0 , .4);
     padding: 10px 15px;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, .4);
+}
 
+header.primary nav a:hover {
+    background-color: rgba(255, 255, 255, .4);
+    color: black;
+    text-decoration: none;
+    transition: all .3s ease-in-out;
 }
