--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -161,6 +161,29 @@ figure{margin:0}
   padding:5px 0 5px 7.5px;
 }
 
+table{
+  width:100%;
+  border:1px solid #c0c0c0;
+  border-collapse:collapse;
+}
+caption{
+  font-weight: bold;
+  margin: 10px;
+  font-size:1.3rem;
+}
+tr:nth-child(3n-1){
+   background-color: rgba(0, 0, 0, 0.1); 
+}
+th{
+background-color: #172635;
+color:#ffffff;
+padding:7.5px;
+}
+td{
+border:1px solid #c0c0c0;
+padding:5px;  
+}
+
 
 
 
