--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -228,6 +228,12 @@ margin-top:20px;
   text-shadow:1px 1px #000;
 }
 
+#practice blockquote cite{
+  display:block;
+  font-size:.8rem;
+  text-align:right;
+  margin-top:20px;
+}
 
 
 aside[role="complementary"]{
